[package]
name = "memo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
dirs = "5.0"
chrono = "0.4.26"
clap = { version = "4.3.11", features = ["derive"] }
